modelo para desktop

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         </section>
         <!-- section 2  -->
         <section class="consultas">
-            <div class="consultas_data">
-                <strong>hoje</strong>
-            </div>
             <ul>
+                <div class="consultas_data">
+                    <strong>hoje</strong>
+                </div>
                 <!-- card 1 -->
                 <li>
                     <!-- primeira parte do card -->
@@ -142,11 +142,11 @@
                 <!-- ############ -->
             </ul>
             <!-- ##################### -->
-            <div class="consultas_data">
-                <strong>Amanhã</strong>
-            </div>
             <!-- ##################### -->
             <ul>
+                <div class="consultas_data">
+                    <strong>Amanhã</strong>
+                </div>
         
                 <li>
                     <!-- primeira parte do card -->
@@ -261,7 +261,250 @@
                     </div>
                 </li>
             </ul>
-
+            <!-- ################### -->
+            <ul>
+                <div class="consultas_data">
+                    <strong>Quarta-feira</strong>
+                </div>
+                <!-- card 1 -->
+                <li>
+                    <!-- primeira parte do card -->
+                    <div class="consulta_card">
+                        <div class="consulta_card-titulo">
+                            <div class="consulta_card-paciente">
+                                <img src="img/perfil-3.jpg" alt="">
+                                <div>
+                                    <strong class="titulo_paciente">
+                                        Luciana Dias
+                                    </strong>
+                                    <span class="subtitulo_paciente">
+                                        <span class="material-symbols-outlined icone">
+                                            videocam
+                                        </span>
+                                        Consulta remota
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                        <button class="consulta_card-chat">
+                            <span class="material-symbols-outlined">
+                                chat_bubble
+                            </span>
+                        </button>
+                    </div>
+                    <!-- ############# -->
+                    <!-- segunda parte do card -->
+                    <div class="conulta_card-conteudo">
+                        <p>
+                            14:00 - 15:00 (1 hora)
+                        </p>
+                        <div class="consulta_card-acoes">
+                            <button class="acao-video">Ligar por vídeo</button>
+                            <button class="acao-audio">Ligar por áudio</button>
+                        </div>
+                    </div>
+                </li>
+                <!-- ############ -->
+                <!-- card 2 -->
+                <li>
+                    <!-- primeira parte do card -->
+                    <div class="consulta_card">
+                        <div class="consulta_card-titulo">
+                            <div class="consulta_card-paciente">
+                                <img src="img/perfil-2.jpg" alt="">
+                                <div>
+                                    <strong class="titulo_paciente">
+                                        Luciana Dias
+                                    </strong>
+                                    <span class="subtitulo_paciente">
+                                        <span class="material-symbols-outlined icone">
+                                            videocam
+                                        </span>
+                                        Consulta remota
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                        <button class="consulta_card-chat">
+                            <span class="material-symbols-outlined">
+                                chat_bubble
+                            </span>
+                        </button>
+                    </div>
+                    <!-- ############# -->
+                    <!-- segunda parte do card -->
+                    <div class="conulta_card-conteudo">
+                        <p>
+                            14:00 - 15:00 (1 hora)
+                        </p>
+                        <div class="consulta_card-acoes">
+                            <button class="acao-endereco">Ver endereço</button>
+                        </div>
+                    </div>
+                </li>
+                <!-- ############ -->
+                <!-- card 3 -->
+                <li>
+                    <!-- primeira parte do card -->
+                    <div class="consulta_card">
+                        <div class="consulta_card-titulo">
+                            <div class="consulta_card-paciente">
+                                <img src="img/perfil-4.jpg" alt="">
+                                <div>
+                                    <strong class="titulo_paciente">
+                                        Luciana Dias
+                                    </strong>
+                                    <span class="subtitulo_paciente">
+                                        <span class="material-symbols-outlined icone">
+                                            videocam
+                                        </span>
+                                        Consulta remota
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                        <button class="consulta_card-chat">
+                            <span class="material-symbols-outlined">
+                                chat_bubble
+                            </span>
+                        </button>
+                    </div>
+                    <!-- ############# -->
+                    <!-- segunda parte do card -->
+                    <div class="conulta_card-conteudo">
+                        <p>
+                            14:00 - 15:00 (1 hora)
+                        </p>
+                        <div class="consulta_card-acoes">
+                            <button class="acao-video">Ligar por vídeo</button>
+                            <button class="acao-audio">Ligar por áudio</button>
+                        </div>
+                    </div>
+                </li>
+                <!-- ############ -->
+            </ul>
+            <!-- ####### -->
+            <ul>
+                <div class="consultas_data">
+                    <strong>Quinta-feira</strong>
+                </div>
+                <!-- card 1 -->
+                <li>
+                    <!-- primeira parte do card -->
+                    <div class="consulta_card">
+                        <div class="consulta_card-titulo">
+                            <div class="consulta_card-paciente">
+                                <img src="img/perfil-3.jpg" alt="">
+                                <div>
+                                    <strong class="titulo_paciente">
+                                        Luciana Dias
+                                    </strong>
+                                    <span class="subtitulo_paciente">
+                                        <span class="material-symbols-outlined icone">
+                                            videocam
+                                        </span>
+                                        Consulta remota
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                        <button class="consulta_card-chat">
+                            <span class="material-symbols-outlined">
+                                chat_bubble
+                            </span>
+                        </button>
+                    </div>
+                    <!-- ############# -->
+                    <!-- segunda parte do card -->
+                    <div class="conulta_card-conteudo">
+                        <p>
+                            14:00 - 15:00 (1 hora)
+                        </p>
+                        <div class="consulta_card-acoes">
+                            <button class="acao-video">Ligar por vídeo</button>
+                            <button class="acao-audio">Ligar por áudio</button>
+                        </div>
+                    </div>
+                </li>
+                <!-- ############ -->
+                <!-- card 2 -->
+                <li>
+                    <!-- primeira parte do card -->
+                    <div class="consulta_card">
+                        <div class="consulta_card-titulo">
+                            <div class="consulta_card-paciente">
+                                <img src="img/perfil-2.jpg" alt="">
+                                <div>
+                                    <strong class="titulo_paciente">
+                                        Luciana Dias
+                                    </strong>
+                                    <span class="subtitulo_paciente">
+                                        <span class="material-symbols-outlined icone">
+                                            videocam
+                                        </span>
+                                        Consulta remota
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                        <button class="consulta_card-chat">
+                            <span class="material-symbols-outlined">
+                                chat_bubble
+                            </span>
+                        </button>
+                    </div>
+                    <!-- ############# -->
+                    <!-- segunda parte do card -->
+                    <div class="conulta_card-conteudo">
+                        <p>
+                            14:00 - 15:00 (1 hora)
+                        </p>
+                        <div class="consulta_card-acoes">
+                            <button class="acao-endereco">Ver endereço</button>
+                        </div>
+                    </div>
+                </li>
+                <!-- ############ -->
+                <!-- card 3 -->
+                <li>
+                    <!-- primeira parte do card -->
+                    <div class="consulta_card">
+                        <div class="consulta_card-titulo">
+                            <div class="consulta_card-paciente">
+                                <img src="img/perfil-4.jpg" alt="">
+                                <div>
+                                    <strong class="titulo_paciente">
+                                        Luciana Dias
+                                    </strong>
+                                    <span class="subtitulo_paciente">
+                                        <span class="material-symbols-outlined icone">
+                                            videocam
+                                        </span>
+                                        Consulta remota
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                        <button class="consulta_card-chat">
+                            <span class="material-symbols-outlined">
+                                chat_bubble
+                            </span>
+                        </button>
+                    </div>
+                    <!-- ############# -->
+                    <!-- segunda parte do card -->
+                    <div class="conulta_card-conteudo">
+                        <p>
+                            14:00 - 15:00 (1 hora)
+                        </p>
+                        <div class="consulta_card-acoes">
+                            <button class="acao-video">Ligar por vídeo</button>
+                            <button class="acao-audio">Ligar por áudio</button>
+                        </div>
+                    </div>
+                </li>
+                <!-- ############ -->
+            </ul>
         </section>
 
     </main>
